# ocap-merkledag

./: .gitignore  Makefile  README.md  Setup.hs  gen-schema.sh  go.mod  go.sum  hie.yaml  ocap-merkledag.cabal  sandstorm-files.list  sandstorm-pkgdef.capnp
cmd/omd/: main.go
cmd/omd-sandstorm-grain/: index.html  main.go
exe/client/: Main.hs
internal/websocket-capnp/: websocket-capnp.go
pkg/blobtree/: upload.go
pkg/containers/: bptree.go
pkg/containers/bptree/: bptree.go  lookup.go
pkg/diskstore/: diskstore.go  diskstore_test.go  protocol.go
pkg/diskstore/filearena/: filearena.go  filearena_test.go
pkg/diskstore/logwriter/: logwrtier.go  storage.go
pkg/diskstore/protocol/: protocol.go
pkg/diskstore/triemap/: cached.go  filearena.go  triemap.go  triemap_test.go
pkg/diskstore/types/: types.go
pkg/diskstore/wal/: wal.go
pkg/errs/: errors.go
pkg/files/: download.go  upload.go
pkg/files/fuse/: fs.go  node.go
pkg/schema/: containers.capnp  diskstore.capnp  files.capnp  gen.go  gen.sh  protocol.capnp
pkg/schema/containers/: containers.capnp.go
pkg/schema/diskstore/: diskstore.capnp.go
pkg/schema/files/: files.capnp.go
pkg/schema/protocol/: protocol.capnp.go
pkg/url/: defaults.go  net.go  url.go  websocket.go
pkg/webui/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js  webui.go
pkg/webui/src/: index.ts  index.tsx
schema/: disk-bigfile.capnp  disk.capnp  files.capnp  protocol.capnp  storage.capnp  util.capnp
src/: BlobStore.hs  CanonicalizeBytes.hs  Client.hs  LibMain.hs  PutBytesStreaming.hs  Server.hs  Server2.hs  Util.hs
src/BlobStore/: BigFile.hs  Files.hs  HighLevel.hs  InMemory.hs  Raw.hs
src/BlobStore/BigFile/: BackedTrie.hs  DiskTrie.hs  FileArena.hs  MemTrie.hs  SELock.hs  TrieError.hs  TrieKey.hs
src/Client/: GetFile.hs  PutFile.hs
tests/: Main.hs
