cabal-version:       2.2
name:                ocap-merkledag
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://git.zenhack.net/zenhack/ocap-merkledag
license:             Apache-2.0
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2020 Ian Denhardt
category:            Database
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://git.zenhack.net/zenhack/ocap-merkledag

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.12 && <5
    , async ^>=2.2.2
    , bytestring ^>=0.10.10
    , text ^>=1.2.3
    , capnp ^>=0.8
    , supervisors ^>=0.2
    , cryptonite ^>=0.27
    , directory ^>=1.3.6
    , memory ^>=0.15.0
    , mtl ^>=2.2.2
    , safe-exceptions ^>= 0.1.7
    , vector ^>=0.12.1
    , network-simple ^>=0.4.5
    , stm ^>=2.5
    , monad-stm ^>=0.1.0.2
    , zenhack-prelude ^>=0.1
    , filepath ^>=1.4.2
    , unix ^>=2.7.2
    , base16-bytestring ^>=1.0.1
  default-language:    Haskell2010

library
  import: shared-opts
  hs-source-dirs:      src, gen
  exposed-modules:
      LibMain

  other-modules:
      Capnp.Gen.Storage
    , Capnp.Gen.Storage.Pure
    , Capnp.Gen.Protocol
    , Capnp.Gen.Protocol.Pure
    , Capnp.Gen.Util
    , Capnp.Gen.Util.Pure
    , Capnp.Gen.ById.Xb4284328a4e09e0a
    , Capnp.Gen.ById.Xb4284328a4e09e0a.Pure
    , Capnp.Gen.ById.Xdcd5a61cb18421e5
    , Capnp.Gen.ById.Xdcd5a61cb18421e5.Pure
    , Capnp.Gen.ById.Xecd50d792c3d9992
    , Capnp.Gen.ById.Xecd50d792c3d9992.Pure
    , Capnp.Gen.ById.Xae1c58020a8c26ad
    , Capnp.Gen.Files
    , Capnp.Gen.Files.Pure

    , BlobStore
    , BlobStore.Files
    , Server
    , Client.PutFile
    , Client.GetFile
    , PutBytesStreaming

executable omd
  import: shared-opts
  build-depends: ocap-merkledag
  hs-source-dirs: exe
  main-is: Main.hs

test-suite tests
  import: shared-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
