cabal-version:       2.2
name:                ocap-merkledag
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://git.zenhack.net/zenhack/ocap-merkledag
license:             Apache-2.0
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2020 Ian Denhardt
category:            Database
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://git.zenhack.net/zenhack/ocap-merkledag

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.12 && <5
    , async ^>=2.2.2
    , bytestring >=0.10 && <0.12
    , containers ^>=0.6.2
    , text >=1.2 && <2.0
    , capnp ^>=0.14
    , supervisors ^>=0.2
    , cryptonite ^>=0.27
    , directory ^>=1.3.6
    , exceptions ^>=0.10
    , memory ^>=0.15.0
    , transformers ^>=0.5.6
    , mtl ^>=2.2.2
    , safe-exceptions ^>= 0.1.7
    , vector ^>=0.12.1
    , network-simple ^>=0.4.5
    , stm ^>=2.5
    , monad-stm ^>=0.1.0.2
    , zenhack-prelude ^>=0.1
    , filepath ^>=1.4.2
    , unix ^>=2.7.2
    , base16-bytestring ^>=1.0.1
    , unix-simple ^>=0.1
    , lifetimes ^>=0.1
  default-language:    Haskell2010

library
  import: shared-opts
  hs-source-dirs:      src, gen
  exposed-modules:
      LibMain
    , CanonicalizeBytes

    , Capnp.Gen.ById.X96e412eec2bcb356.New
    , Capnp.Gen.ById.Xa2d9c03c65e784f5.New
    , Capnp.Gen.ById.Xae1c58020a8c26ad.New
    , Capnp.Gen.ById.Xb4284328a4e09e0a.New
    , Capnp.Gen.ById.Xdcd5a61cb18421e5.New
    , Capnp.Gen.ById.Xecd50d792c3d9992.New
    , Capnp.Gen.DiskBigfile.New
    , Capnp.Gen.Disk.New
    , Capnp.Gen.Files.New
    , Capnp.Gen.Protocol.New
    , Capnp.Gen.Storage.New
    , Capnp.Gen.Util.New

    , Util

    , BlobStore
    , BlobStore.Raw
    , BlobStore.HighLevel
    -- , BlobStore.BigFile
    -- , BlobStore.BigFile.FileArena
    , BlobStore.BigFile.SELock
    -- , BlobStore.BigFile.BackedTrie
    -- , BlobStore.BigFile.MemTrie
    , BlobStore.BigFile.TrieKey
    , BlobStore.BigFile.TrieError
    -- , BlobStore.BigFile.DiskTrie
    -- , BlobStore.Files
    , BlobStore.InMemory
    , Server
    , Server2
    , Client.PutFile
    , Client.GetFile
    , PutBytesStreaming

executable omd-server
  import: shared-opts
  build-depends: ocap-merkledag
  hs-source-dirs: exe/server
  main-is: Main.hs

executable omd
  import: shared-opts
  build-depends: ocap-merkledag
  hs-source-dirs: exe/client
  main-is: Main.hs

test-suite tests
  import: shared-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
      ocap-merkledag
    , hspec
    , QuickCheck
    , quickcheck-instances
